--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,26 @@ button {
 ul, ol{
     list-style: none;
 }
-
+img{
+    display:block;
+}
 
 
 .container {
-    max-width: 1158px;
+    width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
 /* HEADER */
+.header{
+    border-bottom: 1px solid #e7e9fc
+}
 .page-header-container{
     display: flex;
     justify-content: space-between;
+
 }
 
 .header-nav{
@@ -69,9 +75,11 @@ font-weight: 700;
         letter-spacing: 0.02em;
         color: #2e2f42;
         display: flex;
-        column-gap: 40px;
+        gap: 40px;
 }
-
+.nav-link{
+    padding: 24px 0 24px;
+}
 .nav-link:hover, 
 .nav-link:focus{
     color: #404bbf;
@@ -88,6 +96,7 @@ font-weight: 700;
     display: flex;
     column-gap: 40px;
     padding: 24px 0;
+    gap: 40px
 }
 
 .address-link:hover,
@@ -140,6 +149,9 @@ font-weight: 700;
 }
  
 /* CONTENT */
+.section-content{
+    padding: 120px 0
+}
  .heading-first{
     position: absolute;
         width: 1px;
@@ -158,7 +170,7 @@ gap: 24px;
 }
 
 .content-list-item {
-width: calc((100% - 72px) / 4);
+width: calc((100% - 72px) / 4)
 }
 
 
@@ -182,6 +194,7 @@ font-size: 16px;
 
 .our-team-section {
 background: #f4f4fd;
+padding: 120px 0
 
 }
 
@@ -225,11 +238,16 @@ font-size: 16px;
     color: #434455;
     text-align: center;
 }
-.team-info{
+.team-nfo{
     padding: 32px 0;
+    
 }
 
 /* OUR PORTFOLIO */
+.our-portfolio-section{
+    padding-top: 120px;
+        padding-bottom: 120px;
+}
 .our-portfolio-heading {
 font-size: 36px;
 line-height: 1.11;
@@ -272,8 +290,19 @@ letter-spacing: 0.02em;
 /* FOOTER */
 .page-footer-title {
     background-color: #2e2f42;
+    padding: 100px 0
 }
-
+.logo-footer {
+    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+}
 .footer-paragraf {
     font-size: 16px;
     line-height: 1.5;
